--- a/grc338/website-content-hierarchy/contact.html
+++ b/grc338/website-content-hierarchy/contact.html
@@ -20,10 +20,10 @@
             </header>
             <article>
                 <figure>
-                    <img src="christine_home.jpg" alt="People eating breakfast.">
+                    <img src="christine_contact.jpg" alt="Christine's Place facade.">
                 </figure>    
-                <h2>Welcome</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h2>Contact</h2>
+                <p>We are located in the heart of downtown San Luis Obispo so don't be shy – stop by! We are open every day for breakfast and lunch.</p>
             </article>
             <aside>
                 <p>Christine’s Place Restaurant</p>
@@ -31,8 +31,6 @@
                 <p>San Luis Obispo, CA 93401</p>
                 <p>Restaurant Phone: 805.541.0227</p>
                 <p>Catering & Private Parties: 805.541.0227</p>
-
-
             </aside>
             <footer>
                 <p>Footer</p>
