--- a/grc338/website-mobile-first/products.html
+++ b/grc338/website-mobile-first/products.html
@@ -154,28 +154,16 @@
                         <p>Great texture makes these a winner!</p>
                         <p>$11.00</p>
                     </li>
-                </ul>
-
-                <h3>Sides</h3>
-                <ul>
-                    <li>
-                        <h4>Sliced Avocado</h4>
-                        <p>$3.00</p>
+			<li>
+                        <h4>Waffles</h4>
+                        <p>A breakfast classic topped with maple syrup</p>
+                        <p>$12.00</p>
                     </li>
-
-                    <li>
-                        <h4>Side of Fresh Fruit</h4>
-                        <p>$6.00</p>
+			<li>
+                        <h4>Strawberry Waffles</h4>
+                        <p>Our classic fluffy waffles topped with fresh strawberries and whipped cream</p>
+                        <p>$13.00</p>
                     </li>
-                    <li>
-                        <h4>Side of Bacon OR Sausage</h4>
-                        <p>$6.00</p>
-                    </li>
-                    <li>
-                        <h4>Hash Brown Patties</h4>
-                        <p>$4.00</p>
-                    </li>
-                    
                 </ul>
         
             <footer>
