--- a/grc338/website-first/index.html
+++ b/grc338/website-first/index.html
@@ -1,7 +1,7 @@
 <!doctype html>  
 <html>  
     <head>  
-        <title>Untitled</title>  
+        <title>Le Fleur Sauvage</title>  
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">  
         <meta http-equiv="refresh" content="0;url=https://dory-bassoon-5ag9.squarespace.com">  
     </head>  
