--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -23,7 +23,7 @@
                             <li><a href="mainstory.html">Book of the Month</a></li>
                             <li><a href="#">Authors</a></li>
                             <li><a href="#">Previous Reads</a></li>
-                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Community</a></li>
                         </ul>
                     </nav>
                 </header>
@@ -45,9 +45,9 @@
                     <section class="main page image">
                         <a href="#">
                             <figure>
-                                <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
+                                <img src="july pick.jpeg" alt="The Only Woman in the Room">
                             </figure>
-                                <h3>Heading of the story</h3>
+                                <h3>July Book Pick is Here...</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -59,7 +59,7 @@
 
                     <section class="main page no image">
                         <a href="#">
-                                <h3>Heading of the story</h3>
+                                <h3>How to Judge a Book By its Cover</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -71,7 +71,7 @@
 
                     <section class="main page no image">
                         <a href="#">
-                                <h3>Heading of the story</h3>
+                                <h3>Staff Selections: Amy</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -84,9 +84,9 @@
                     <section class="main page image">
                         <a href="#">
                             <figure>
-                                <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
+                                <img src="new release.jpeg" alt="Collection of Book Covers">
                             </figure>
-                                <h3>Heading of the story</h3>
+                                <h3>New Release from One of Our Favorite Authors</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -99,9 +99,9 @@
                     <section class="main page image">
                         <a href="#">
                             <figure>
-                                <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
+                                <img src="book stack.jpeg" alt="Stack of books on table.">
                             </figure>
-                                <h3>Heading of the story</h3>
+                                <h3>Top 10 Female Protagonists of All Time</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -113,7 +113,7 @@
 
                     <section class="main page no image">
                         <a href="#">
-                                <h3>Heading of the story</h3>
+                                <h3>Do You Have a Case of Reader's Block?</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
@@ -126,9 +126,9 @@
                     <section class="main page image">
                         <a href="#">
                             <figure>
-                                <img src="★find-a-nice-image.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
+                                <img src="women.jpeg" alt="Women network.">
                             </figure>
-                                <h3>Heading of the story</h3>
+                                <h3>Get Connected with Boss Ladies in Your Community</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
