--- a/grc339/digital-magazine/mainstory.html
+++ b/grc339/digital-magazine/mainstory.html
@@ -3,6 +3,7 @@
         <head>
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1" />
+            <link rel="stylesheet" href="https://use.typekit.net/bsz7tya.css">
             <link rel="stylesheet" type="text/css" href="style.css">
             <title>Boss Lady Book Club</title> 
 
