--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -27,7 +27,7 @@
                         </ul>
                     </nav>
                 </header>
-                <main>
+                <main class="main">
                     <section class="mainstory">
                         <a href="mainstory.html">
                             <figure>
@@ -43,7 +43,15 @@
                     </section>
 
 
-                    
+                    <section class="secondary">
+                        <a href="photogallery.html">
+                            <figure>
+                                <img src="books2.jpeg" alt="Books scattered on table.">
+                            </figure>
+                                <h3>Check out our book gallery!</h3>
+                        </a>    
+                    </section>
+
                     <section class="secondary">
                         <a href="#">
                             <figure>
