--- a/grc339/digital-magazine/mainstory.html
+++ b/grc339/digital-magazine/mainstory.html
@@ -5,7 +5,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1" />
             <link rel="stylesheet" href="https://use.typekit.net/bsz7tya.css">
             <link rel="stylesheet" type="text/css" href="style.css">
-            <title>Boss Lady Book Club</title> 
+            <title>Boss Lady Book of the Month</title> 
 
                 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
                 <meta http-equiv="Pragma" content="no-cache" />
