--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -29,17 +29,24 @@
                 </header>
                 <main class="main">
                     <section class="mainstory">
-                        <a href="mainstory.html">
+                        
                             <figure>
                             	<div>
+                            		<a href="mainstory.html">
                                 	<img src="nook.jpeg" alt="A cozy reading nook.">
+                                </a>
                             	</div>
                             </figure>
-                                <h3>How to Find Time to Read While Being a Full-Time Boss</h3>
+                                <h3>
+                                <a href="mainstory.html">
+                                How to Find Time to Read While Being a Full-Time Boss
+                            	</a>
+                            	</h3>
                                 <p>
+                                	<a href="mainstory.html">
                                     Struggling to maintain a balance while being a full-time boss? From CEO to full-time Mom, women's lives can be crazy busy and it can be difficult to find time to sit still long enough to take a break, much less read a book. Here are some of our favorite tips and tricks to working reading time into your daily routine.
-                                </p>
-                        </a>    
+                                	</a>
+                                </p>  
                     </section>
 
 
