--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -22,8 +22,8 @@
                         <ul>
                             <li><a href="mainstory.html">Book of the Month</a></li>
                             <li><a href="#">Authors</a></li>
-                            <li><a href="#">Previous Reads</a></li>
-                            <li><a href="#">Community</a></li>
+                            <li><a href="photogallery.html">Previous Reads</a></li>
+                            <li><a href="newsletter.html">Subscribe</a></li>
                         </ul>
                     </nav>
                 </header>
