--- a/grc339/digital-magazine/mainstory.html
+++ b/grc339/digital-magazine/mainstory.html
@@ -20,10 +20,10 @@
                     
                     <nav>
                         <ul> 
-                            <li><a href="#">Book of the Month</a></li>
+                            <li><a href="mainstory.html">Book of the Month</a></li>
                             <li><a href="#">Authors</a></li>
-                            <li><a href="#">Previous Reads</a></li>
-                            <li><a href="#">Community</a></li>
+                            <li><a href="photogallery.html">Previous Reads</a></li>
+                            <li><a href="newsletter.html">Subscribe</a></li>
                         </ul>
                     </nav>
                 </header>
